tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__ReusableBatteryS-AAAAAAAAAAAAAAAAAAACZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 613,
  "prerequisites": [
    624,
    609
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Sodium, cadmium, and lithium batteries are rechargeable batteries. They're crafted without stored energy, but can be charged in any gregtech machine. If unneeded, they can be placed in an extractor and converted back into small battery hulls, but their contents are lost.\n\nIf placed in a machine, it will fill up if there's excess power, and drain if the machine can't get enough. Handy for high-EU machines you don't want to choke.\n\n[note]Sodium is the one that stores the least EU of the 3 rechargeable batteries, but is definitely the easiest to get.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Reusable Battery: Sodium",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    624,
    609
  ],
  "rewards": [],
  "tasks": []
}
